--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,24 +51,7 @@ steps:
 
       foreach ($File in $Files)
       {
-        if ($Files.Count -ge 2)
-        {
-          # Get the last folder in the path
-          $lastFolder = (Get-Item $File).PSParentPath | Split-Path -Leaf
-
-          # Get the file name without extension
-          $fileNameWithoutExtension = [System.IO.Path]::GetFileNameWithoutExtension($File)
-
-          # Get the file extension
-          $fileExtension = [System.IO.Path]::GetExtension($File)
-
-          # Create the new file name by appending the last folder
-          $newFileName = $fileNameWithoutExtension+"_"+$lastFolder+$fileExtension
-
-          # Construct the new file File
-          $newFilePath = Join-Path (Split-Path $File) $newFileName
-
-        Write-Host "Working on: $newFilePath"
+        Write-Host "Working on: $File"
         $boundary = [System.Guid]::NewGuid().ToString()
 
         # Get file content as bytes
@@ -77,7 +60,7 @@ steps:
         # Create the body content as a string
       $body = @"
       --$boundary
-      Content-Disposition: form-data; name="file"; filename="$newFilePath"
+      Content-Disposition: form-data; name="file"; filename="$(Split-Path $Files -leaf)"
       Content-Type: application/octet-stream
 
       $content
@@ -90,7 +73,7 @@ steps:
       Content-Disposition:  form-data; name="tool_name"
       Content-Type: text/plain
 
-      $newFilePath
+      $(Split-Path $Files -leaf)
       --$boundary--
       "@
 
@@ -101,7 +84,6 @@ steps:
 
         # Send the request using Invoke-RestMethod
         $response = Invoke-RestMethod -Uri $env:endpointUrl -Method Post -Body $body -Headers $headers
-        }
       }
   env:
     client_id: $(client_id)
